Lots of changes, mainly to do with the fact that each table cell now contains the number of the colour used there as text. This allows for much much faster encoding, and potentially in the future, the ability to show/hide the numbers. Currently they're invisible thanks to color:transparent in fairisle.css. Also updated jquery to 1.4.1, which allows the interaction with the grid to be set once, and automatically applied to new elements using the function live()

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 
 	<title>Fairisle</title>
 	<link rel="stylesheet" href="reset.css" type="text/css" charset="utf-8" />
-	<script src="jquery.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="jquery.rule-1.0.1-min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="jquery.progressbar.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="jquery-1.4.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <!-- // <script src="jquery.progressbar.min.js" type="text/javascript" charset="utf-8"></script> -->
 	<script src="json2.js" type="text/javascript" charset="utf-8"></script>
     <!-- // <script src="jquery.cookie.js" type="text/javascript" charset="utf-8"></script> -->
     <!-- // <script src="jquery.JSONcookie.js" type="text/javascript" charset="utf-8"></script> -->
 	<link rel="stylesheet" href="farbtastic.css" type="text/css" />
 	<script type="text/javascript" src="farbtastic.js"></script>
-	<link rel="stylesheet" href="fairisle.css" type="text/css" />
 	<script src="fairisle.js" type="text/javascript" charset="utf-8"></script>
     <!-- We need an empty style sheet for jQuery.rules to work -->
     <style type="text/css"></style>
+	<link rel="stylesheet" href="fairisle.css" type="text/css" />
+	<script src="jquery.rule-1.0.1-min.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript" charset="utf-8">
         $(document).ready(function() {
             init_fairisle();
@@ -115,10 +115,10 @@
 
 <div id="grid_holder">
 <table id="maingrid">
-	<tr><th>1</th><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><th>1</th></tr>
-	<tr><th>2</th><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><th>2</th></tr>
-	<tr><th>3</th><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><th>3</th></tr>
-	<tr><th>4</th><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><th>4</th></tr>
+	<tr><th>1</th><td>0</td><td>0</td><td>0</td><td>0</td><th>1</th></tr>
+	<tr><th>2</th><td>0</td><td>0</td><td>0</td><td>0</td><th>2</th></tr>
+	<tr><th>3</th><td>0</td><td>0</td><td>0</td><td>0</td><th>3</th></tr>
+	<tr><th>4</th><td>0</td><td>0</td><td>0</td><td>0</td><th>4</th></tr>
 </table>
 <!-- <textarea id="testarea" rows="20" cols="100"></textarea> -->
 
