Moved js, css, and images to subdirectories

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
 	<title>Fairisle</title>
-	<link rel="stylesheet" href="reset.css" type="text/css" charset="utf-8" />
-	<script src="jquery-1.4.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<link rel="stylesheet" href="css/reset.css" type="text/css" charset="utf-8" />
+	<script src="js/jquery-1.4.1.min.js" type="text/javascript" charset="utf-8"></script>
     <!-- // <script src="jquery.progressbar.min.js" type="text/javascript" charset="utf-8"></script> -->
-	<script src="json2.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/json2.js" type="text/javascript" charset="utf-8"></script>
     <!-- // <script src="jquery.cookie.js" type="text/javascript" charset="utf-8"></script> -->
     <!-- // <script src="jquery.JSONcookie.js" type="text/javascript" charset="utf-8"></script> -->
-	<link rel="stylesheet" href="farbtastic.css" type="text/css" />
-	<script type="text/javascript" src="farbtastic.js"></script>
-	<script src="fairisle.js" type="text/javascript" charset="utf-8"></script>
+	<link rel="stylesheet" href="css/farbtastic.css" type="text/css" />
+	<script type="text/javascript" src="js/farbtastic.js"></script>
+	<script src="js/fairisle.js" type="text/javascript" charset="utf-8"></script>
     <!-- We need an empty style sheet for jQuery.rules to work -->
     <style type="text/css"></style>
-	<link rel="stylesheet" href="fairisle.css" type="text/css" />
-	<link rel="stylesheet" type="text/css" media="print" href="fairisle-print.css" />
-	<script src="jquery.rule-1.0.1-min.js" type="text/javascript" charset="utf-8"></script>
+	<link rel="stylesheet" href="css/fairisle.css" type="text/css" />
+	<link rel="stylesheet" type="text/css" media="print" href="css/fairisle-print.css" />
+	<script src="js/jquery.rule-1.0.1-min.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript" charset="utf-8">
         $(document).ready(function() {
             init_fairisle();
